Fixing alignment of arrow in page-back button

--- a/public/assets/scss/pages/_page.scss
+++ b/public/assets/scss/pages/_page.scss
@@ -74,7 +74,7 @@ body.page {
   position: fixed;
   overflow: hidden;
   background: $white;
-  padding-top: 262px;
+  padding-top: 250px;
   will-change: width;
   text-decoration: none;
   width: $global-spacing;
